kustomize/base/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: homelab
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
          volumeMounts:
            - name: data
              mountPath: /var/lib/pgadmin
          readinessProbe:
            exec:
              command: ["nc", "-vz", "127.0.0.1", "80"]
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
            successThreshold: 1
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pgadmin-data
