kustomize/base/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: homelab
  labels:
    app: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 80
